@@ -226,6 +226,9 @@ void init_screens(struct screen_s *screens[])
         screens[i]->context_list[PG_STAT_STATEMENTS_IO_NUM].context = pg_stat_statements_io;
         screens[i]->context_list[PG_STAT_STATEMENTS_IO_NUM].order_key = PG_STAT_STATEMENTS_IO_ORDER_MIN;
         screens[i]->context_list[PG_STAT_STATEMENTS_IO_NUM].order_desc = true;
+        screens[i]->context_list[PG_STAT_STATEMENTS_TEMP_NUM].context = pg_stat_statements_temp;
+        screens[i]->context_list[PG_STAT_STATEMENTS_TEMP_NUM].order_key = PG_STAT_STATEMENTS_TEMP_ORDER_MIN;
+        screens[i]->context_list[PG_STAT_STATEMENTS_TEMP_NUM].order_desc = true;
     }
 }
 
@@ -764,6 +767,13 @@ void prepare_query(struct screen_s * screen, char * query)
             }
             strcat(query, tmp);             /* insert number of field into ORDER BY .. */
             strcat(query, PG_STAT_STATEMENTS_IO_QUERY_P2);
+            break;
+        case pg_stat_statements_temp:
+            /* here we use query native ORDER BY, and we should incrementing order key */
+            sprintf(tmp, "%d", screen->context_list[PG_STAT_STATEMENTS_TEMP_NUM].order_key + 1);
+            strcpy(query, PG_STAT_STATEMENTS_TEMP_QUERY_P1);
+            strcat(query, tmp);             /* insert number of field into ORDER BY .. */
+            strcat(query, PG_STAT_STATEMENTS_TEMP_QUERY_P2);
             break;
     }
 }
@@ -1678,6 +1688,10 @@ void diff_arrays(char ***p_arr, char ***c_arr, char ***res_arr, struct screen_s 
                 max = PG_STAT_STATEMENTS_IO_DIFF_LATEST_MAX;
             }
             break;
+        case pg_stat_statements_temp:
+            min = PG_STAT_STATEMENTS_TEMP_DIFF_MIN;
+            max = PG_STAT_STATEMENTS_TEMP_DIFF_MAX;
+            break;
         default:
             break;
     }
@@ -1737,6 +1751,9 @@ void sort_array(char ***res_arr, int n_rows, int n_cols, struct screen_s * scree
             && order_key < PG_STAT_STATEMENTS_IO_DIFF_LATEST_MIN 
             && order_key > PG_STAT_STATEMENTS_IO_DIFF_LATEST_MAX)
         return;
+    if (screen->current_context == pg_stat_statements_temp 
+            && order_key < PG_STAT_STATEMENTS_TEMP_DIFF_MIN 
+            && order_key > PG_STAT_STATEMENTS_TEMP_DIFF_MAX)
 
     if (order_key == INVALID_ORDER_KEY)
         return;
@@ -1900,6 +1917,11 @@ void change_sort_order(struct screen_s * screen, bool increment, bool * first_it
                 max = PG_STAT_STATEMENTS_IO_ORDER_91_MAX;
             else
                 max = PG_STAT_STATEMENTS_IO_ORDER_LATEST_MAX;
+            *first_iter = true;
+            break;
+        case pg_stat_statements_temp:
+            min = PG_STAT_STATEMENTS_TEMP_ORDER_MIN;
+            max = PG_STAT_STATEMENTS_TEMP_ORDER_MAX;
             *first_iter = true;
             break;
         default:
@@ -3464,7 +3486,8 @@ void get_query_by_id(WINDOW * window, struct screen_s * screen, PGconn * conn)
 {
     if (screen->current_context != pg_stat_statements_timing
             && screen->current_context != pg_stat_statements_general
-            && screen->current_context != pg_stat_statements_io) {
+            && screen->current_context != pg_stat_statements_io
+            && screen->current_context != pg_stat_statements_temp) {
         wprintw(window, "Get query text not allowed here.");
         return;
     }
@@ -3801,7 +3824,7 @@ void print_help_screen(bool * first_iter)
     wprintw(w, "general actions:\n\
   a,d,i,f,r       mode: 'a' activity, 'd' databases, 'i' indexes, 'f' functions, 'r' replication,\n\
   s,t,T           's' sizes, 't' tables, 'T' tables IO,\n\
-  x,X,c           'x' stmt timings, 'X' stmt general, 'c' stmt IO.\n\
+  x,X,c,v         'x' stmt timings, 'X' stmt general, 'c' stmt IO, 'v' stmt temp.\n\
   Left,Right,/    'Left,Right' change column sort, '/' change sort desc/asc.\n\
   C,E,R           config: 'C' show config, 'E' edit configs, 'R' reload config.\n\
   p                       'p' start psql session.\n\
@@ -4020,6 +4043,9 @@ int main(int argc, char *argv[])
                     break;
                 case 'c':               /* open pg_stat_statements_io screen */
                     switch_context(w_cmd, screens[console_index], pg_stat_statements_io, p_res, first_iter);
+                    break;
+                case 'v':               /* open pg_stat_statements_temp screen */
+                    switch_context(w_cmd, screens[console_index], pg_stat_statements_temp, p_res, first_iter);
                     break;
                 case 'A':               /* change duration threshold in pg_stat_activity wcreen */
                     change_min_age(w_cmd, screens[console_index], p_res, first_iter);
